# dustrun

./: CHANGELOG.md  Cargo.toml  README.md  structure.md
.github/workflows/: ci.yml
crates/conformance/: Cargo.toml
crates/conformance/src/: lib.rs
crates/conformance/tests/: conformance.rs
crates/dustrun/: Cargo.toml
crates/dustrun/src/: args.rs  main.rs
crates/dvm/: Cargo.toml
crates/dvm/src/: lib.rs  runtime.rs
crates/dvm/src/regime/: mod.rs  phi.rs  phi_witness.rs  q.rs
docs/: trace-schema.md
tests/fixtures/: hello_k.json  phi_inadmissible.json  phi_placeholder.json  phi_prove.json  phi_witness.json  phi_witness_variable_digest.json  q_linearity.json  q_ok.json
tests/fixtures/dir/: hello_k.dir.json  phi_inadmissible.dir.json  phi_placeholder.dir.json  phi_prove.dir.json  phi_witness.dir.json  phi_witness_variable_digest.dir.json  q_linearity.dir.json  q_ok.dir.json
tests/golden/: hello_k.trace.json  phi_inadmissible.trace.json  phi_placeholder.trace.json  phi_prove.trace.json  phi_prove_error.trace.json  phi_witness.trace.json  phi_witness_variable_digest.trace.json  q_linearity.trace.json  q_ok.trace.json
