# File: Cargo.toml
# Workspace root for the dustrun repository
#
# This workspace defines the Dust Virtual Machine (DVM) reference implementation
# and its associated tooling. Semantic authority lives in crates/dvm.
#
# This file is canonical for workspace structure only.
# Language semantics are defined by the DPL specification.

[workspace]
members = [
    "crates/dvm",
    "crates/dustrun",
    "crates/conformance",
]

resolver = "2"

[workspace.package]
edition = "2021"
license = "DOSL"
authors = ["Dust Research Division <research@dustlang.org>"]
repository = "https://github.com/dustlang/dustrun"
homepage = "https://dustlang.org"
rust-version = "1.75"

[workspace.dependencies]
# Error handling
thiserror = "1.0"

# CLI argument parsing
clap = { version = "4.5", features = ["derive"] }

# Serialization (used for DIR loading and traces)
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging / tracing (deterministic, structured)
log = "0.4"
env_logger = "0.11"

# Deterministic data structures
indexmap = "2.2"

# Time handling (logical + physical clocks)
time = { version = "0.3", features = ["macros"] }

# Conformance and testing
pretty_assertions = "1.4"