# File: crates/dvm/Cargo.toml
# Dust Virtual Machine (DVM) core library
#
# This crate is the authoritative reference implementation of DVM semantics.
# It encodes execution, admissibility, effects, time, and regime behavior
# exactly as defined by the DPL specification.
#
# This crate contains NO compiler logic and NO CLI logic.

[package]
name = "dust-dvm"
version = "0.1.0"
description = "Dust Virtual Machine (DVM) reference implementation for DPL"
license = "DOSL"
edition = "2021"
authors = ["Dust Research Division <research@dustlang.org>"]
repository = "https://github.com/dustlang/dustrun"
rust-version = "1.75"

[lib]
name = "dust_dvm"
path = "src/lib.rs"

[dependencies]
# Shared workspace dependencies
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
log = { workspace = true }
indexmap = { version = "2", features = ["serde"] }
time = { workspace = true }

# Internal invariants and deterministic collections
once_cell = "1.19"

[dev-dependencies]
pretty_assertions = { workspace = true }